--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -81,6 +81,105 @@
     });
 </script>
 <style>
+    .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9 {
+        float: left; position: relative;
+    }
+
+    .col-lg-12 {
+        width: 100%
+    }
+
+    .col-lg-11 {
+        width: 91.66666667%
+    }
+
+    .col-lg-10 {
+        width: 83.33333333%
+    }
+
+    .col-lg-9 {
+        width: 75%
+    }
+
+    .col-lg-8 {
+        width: 66.66666667%
+    }
+
+    .col-lg-7 {
+        width: 58.33333333%
+    }
+
+    .col-lg-6 {
+        width: 50%
+    }
+
+    .col-lg-5 {
+        width: 41.66666667%
+    }
+
+    .col-lg-4 {
+        width: 33.33333333% !important;
+    }
+
+    .col-lg-3 {
+        width: 25%
+    }
+
+    .col-lg-2 {
+        width: 16.66666667%
+    }
+
+    .col-lg-1 {
+        width: 8.33333333%
+    }
+
+    .col-lg-offset-12 {
+        margin-left: 100%
+    }
+
+    .col-lg-offset-11 {
+        margin-left: 91.66666667%
+    }
+
+    .col-lg-offset-10 {
+        margin-left: 83.33333333%
+    }
+
+    .col-lg-offset-9 {
+        margin-left: 75%
+    }
+
+    .col-lg-offset-8 {
+        margin-left: 66.66666667%
+    }
+
+    .col-lg-offset-7 {
+        margin-left: 58.33333333%
+    }
+
+    .col-lg-offset-6 {
+        margin-left: 50%
+    }
+
+    .col-lg-offset-5 {
+        margin-left: 41.66666667%
+    }
+
+    .col-lg-offset-4 {
+        margin-left: 33.33333333%
+    }
+
+    .col-lg-offset-3 {
+        margin-left: 25%
+    }
+
+    .col-lg-offset-2 {
+        margin-left: 16.66666667%
+    }
+
+    .col-lg-offset-1 {
+        margin-left: 8.33333333%
+    }
     ul li a{
         color: #4c4c4c;
     }
@@ -95,7 +194,7 @@
         <div class="col-lg-4">
             <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
-        <div class="col-lg-6 col-lg-offset-2" id="top">
+        <div class="col-lg-8" id="top">
             <div style="text-align: right"><a href="index.html">中文</a>&nbsp;|&nbsp;<a href="index.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
@@ -117,18 +216,18 @@
     </ol>
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
-        <div class="item active" style="height: 350px; overflow: hidden;">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;margin-top: -130px;" alt="First slide">
+        <div class="item active" style="height: 400px; overflow: hidden;">
+            <img src="/Public/home/images/city1.jpg" style=" width:100%;height: 400px;margin-top: -25px;" alt="First slide">
         </div>
-        <div class="item" style="height: 350px; overflow: hidden;">
-            <img src="/Public/home/images/banner4.jpg" style="width:100%;margin-top: -350px;" alt="Second slide">
+        <div class="item" style="height: 400px; overflow: hidden;">
+            <img src="/Public/home/images/city2.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Second slide">
         </div>
-        <div class="item" style="height: 350px; overflow: hidden;">
-            <img src="/Public/home/images/banner3.jpg" style="width:100%;margin-top: -350px;" alt="Third slide">
+        <div class="item" style="height: 400px; overflow: hidden;">
+            <img src="/Public/home/images/city3.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Third slide">
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 50px;">
+<div class="container" style="margin-top: 20px;">
     <div class="row">
         <div class="col-lg-12" id="title">
 
