--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -146,6 +146,105 @@
     #log:hover{
         cursor: pointer;
     }
+    .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9 {
+        float: left; position: relative;
+    }
+
+    .col-lg-12 {
+        width: 100%
+    }
+
+    .col-lg-11 {
+        width: 91.66666667%
+    }
+
+    .col-lg-10 {
+        width: 83.33333333%
+    }
+
+    .col-lg-9 {
+        width: 75%
+    }
+
+    .col-lg-8 {
+        width: 66.66666667%
+    }
+
+    .col-lg-7 {
+        width: 58.33333333%
+    }
+
+    .col-lg-6 {
+        width: 50%
+    }
+
+    .col-lg-5 {
+        width: 41.66666667%
+    }
+
+    .col-lg-4 {
+        width: 33.33333333% !important;
+    }
+
+    .col-lg-3 {
+        width: 25%
+    }
+
+    .col-lg-2 {
+        width: 16.66666667%
+    }
+
+    .col-lg-1 {
+        width: 8.33333333%
+    }
+
+    .col-lg-offset-12 {
+        margin-left: 100%
+    }
+
+    .col-lg-offset-11 {
+        margin-left: 91.66666667%
+    }
+
+    .col-lg-offset-10 {
+        margin-left: 83.33333333%
+    }
+
+    .col-lg-offset-9 {
+        margin-left: 75%
+    }
+
+    .col-lg-offset-8 {
+        margin-left: 66.66666667%
+    }
+
+    .col-lg-offset-7 {
+        margin-left: 58.33333333%
+    }
+
+    .col-lg-offset-6 {
+        margin-left: 50%
+    }
+
+    .col-lg-offset-5 {
+        margin-left: 41.66666667%
+    }
+
+    .col-lg-offset-4 {
+        margin-left: 33.33333333%
+    }
+
+    .col-lg-offset-3 {
+        margin-left: 25%
+    }
+
+    .col-lg-offset-2 {
+        margin-left: 16.66666667%
+    }
+
+    .col-lg-offset-1 {
+        margin-left: 8.33333333%
+    }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
@@ -153,7 +252,7 @@
         <div class="col-lg-4">
             <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
-        <div class="col-lg-6 col-lg-offset-2" id="top">
+        <div class="col-lg-8 " id="top">
             <div style="text-align: right"><a href="news.html">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
@@ -167,8 +266,8 @@
     </div>
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
-    <div style="width: 100%;height: 350px; overflow: hidden; padding: 0">
-        <img style="width: 100%;margin-top: -350px;" src="/Public/home/images/banner2.jpg">
+    <div style="width: 100%;height: 400px; overflow: hidden; padding: 0">
+        <img style="width: 100%;height: 400px;" src="/Public/home/images/banner2.jpg">
     </div>
 </div>
 <div class="container" style="margin-top: -50px;">
