--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -24,12 +24,14 @@
         color: #9b761d
     }
 
-    #top div a{
+    #top div a {
         font-family: "Microsoft YaHei";
-        text-decoration: none;font-size:12px;color: #000;
+        text-decoration: none;
+        font-size: 12px;
+        color: #000;
     }
 
-    #bottom{
+    #bottom {
         font-size: 12px;
         font-family: "Microsoft YaHei";
     }
@@ -38,54 +40,69 @@
         border-radius: 15px;
         width: 160px;
         transform: rotate(45deg);
+        -ms-transform: rotate(45deg); /* IE 9 */
+        -moz-transform: rotate(45deg); /* Firefox */
+        -webkit-transform: rotate(45deg); /* Safari 和 Chrome */
+        -o-transform: rotate(45deg);
         overflow: hidden;
         margin-left: 65px;
         float: left;
         margin-top: -30px;;
     }
 
-    .picture:hover{
+    .picture:hover {
         cursor: pointer;
     }
 
     .picture > img {
         max-width: 100%;
         transform: rotate(-45deg) scale(1.42);
+        -ms-transform: rotate(-45deg) scale(1.42); /* IE 9 */
+        -moz-transform: rotate(-45deg) scale(1.42); /* Firefox */
+        -webkit-transform: rotate(-45deg) scale(1.42); /* Safari 和 Chrome */
+        -o-transform: rotate(-45deg) scale(1.42);
     }
 
-    .space{
+    .space {
         width: 113px;
         height: 100px;
         float: left;
     }
 
-    .shade{
+    .shade {
         width: 160px;
         height: 160px;
         border-radius: 15px;
         position: absolute;
         z-index: 10;
         background-color: #666;
-        opacity:0.7;-webkit-opacity:0.7;
+        opacity: 0.7;
+        -webkit-opacity: 0.7;
         overflow: hidden;
         display: none;
     }
 
-    .no_shade{
+    .no_shade {
         transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg); /* IE 9 */
+        -moz-transform: rotate(-45deg); /* Firefox */
+        -webkit-transform: rotate(-45deg); /* Safari 和 Chrome */
+        -o-transform: rotate(-45deg);
+
     }
 
-    #name{
+    #name {
         font-size: 14px;
         font-weight: 600;
         font-family: "Microsoft YaHei", sans-serif;
     }
 
-    #english,#position{
+    #english, #position {
         font-size: 10px;
         font-family: "Microsoft YaHei", sans-serif;
     }
-    .no_shade p{
+
+    .no_shade p {
         margin-left: 78px;
         margin-top: -10px;
         width: 50px;
@@ -93,7 +110,13 @@
         text-align: center;
     }
 
-    #hr{margin-left:88px;width: 30px;margin-top: 3px;border-top: 1px solid; height: 10px;}
+    #hr {
+        margin-left: 88px;
+        width: 30px;
+        margin-top: 3px;
+        border-top: 1px solid;
+        height: 10px;
+    }
 </style>
 <script>
     $(function () {
@@ -101,8 +124,8 @@
         if (aQuery.indexOf("team") > 0) {
             $("#team").css('color', '#9b761d');
         }
-        if(aQuery.indexOf("status")>0){
-            $('#img img').attr('src','/Public/home/images/team_en.jpg');
+        if (aQuery.indexOf("status") > 0) {
+            $('#img img').attr('src', '/Public/home/images/team_en.jpg');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
@@ -116,18 +139,24 @@
             $.ajax({
                 "url": '/home/index/team',
                 "dataType": 'json',
-                "data":{
-                    "status":1
+                "data": {
+                    "status": 1
                 },
                 success: function (r) {
+                    if (r.msg.agent == 1) {
+                        $('#imgs').css('margin-left', '1%');
+                    }
                     //$('#team_intro').text(r.msg.intro);
                 }
             });
-        }else{
+        } else {
             $.ajax({
                 "url": '/home/index/team',
                 "dataType": 'json',
                 success: function (r) {
+                    if (r.msg.agent == 1) {
+                        $('#imgs').css('margin-left', '1%');
+                    }
                     //$('#team_intro').text(r.msg.intro);
                 }
             });
@@ -152,7 +181,7 @@
                         if (k % 7 == 0) {
                             $('#' + i).append("<div class='space'></div>");
                         }
-                        $('#' + i).append("<div class='picture' onmouseout='hide(this)'  onmouseover='show(this)'><div class='shade'><div class='no_shade'><p style='margin-top: 80px;' id='name'>"+r.msg[k].name+"</p><p id='english'>"+r.msg[k].english+"</p><p id='hr'></p><p id='position'>"+r.msg[k].position+"</p></div></div><img src='../.." + r.msg[k].img + "'></div>");
+                        $('#' + i).append("<div class='picture' onmouseout='hide(this)'  onmouseover='show(this)'><div class='shade'><div class='no_shade'><p style='margin-top: 80px;' id='name'>" + r.msg[k].name + "</p><p id='english'>" + r.msg[k].english + "</p><p id='hr'></p><p id='position'>" + r.msg[k].position + "</p></div></div><img src='../.." + r.msg[k].img + "'></div>");
                     }
                     m = m + 7;
                     n = n + 7;
@@ -160,12 +189,12 @@
             }
         });
     });
-    function show(id){
-       $(id).find('.shade').css('display','block');
+    function show(id) {
+        $(id).find('.shade').css('display', 'block');
     }
 
-    function hide(id){
-        $(id).find('.shade').css('display','none');
+    function hide(id) {
+        $(id).find('.shade').css('display', 'none');
     }
 </script>
 <style>
@@ -175,18 +204,122 @@
         padding-top: 90px;
         font-family: "Microsoft YaHei", sans-serif
     }
-    #log:hover{
+
+    #log:hover {
         cursor: pointer;
+    }
+
+    .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9 {
+        float: left;
+        position: relative;
+    }
+
+    .col-lg-12 {
+        width: 100%
+    }
+
+    .col-lg-11 {
+        width: 91.66666667%
+    }
+
+    .col-lg-10 {
+        width: 83.33333333%
+    }
+
+    .col-lg-9 {
+        width: 75%
+    }
+
+    .col-lg-8 {
+        width: 66.66666667%
+    }
+
+    .col-lg-7 {
+        width: 58.33333333%
+    }
+
+    .col-lg-6 {
+        width: 50%
+    }
+
+    .col-lg-5 {
+        width: 41.66666667%
+    }
+
+    .col-lg-4 {
+        width: 33.33333333% !important;
+    }
+
+    .col-lg-3 {
+        width: 25%
+    }
+
+    .col-lg-2 {
+        width: 16.66666667%
+    }
+
+    .col-lg-1 {
+        width: 8.33333333%
+    }
+
+    .col-lg-offset-12 {
+        margin-left: 100%
+    }
+
+    .col-lg-offset-11 {
+        margin-left: 91.66666667%
+    }
+
+    .col-lg-offset-10 {
+        margin-left: 83.33333333%
+    }
+
+    .col-lg-offset-9 {
+        margin-left: 75%
+    }
+
+    .col-lg-offset-8 {
+        margin-left: 66.66666667%
+    }
+
+    .col-lg-offset-7 {
+        margin-left: 58.33333333%
+    }
+
+    .col-lg-offset-6 {
+        margin-left: 50%
+    }
+
+    .col-lg-offset-5 {
+        margin-left: 41.66666667%
+    }
+
+    .col-lg-offset-4 {
+        margin-left: 33.33333333%
+    }
+
+    .col-lg-offset-3 {
+        margin-left: 25%
+    }
+
+    .col-lg-offset-2 {
+        margin-left: 16.66666667%
+    }
+
+    .col-lg-offset-1 {
+        margin-left: 8.33333333%
     }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
-            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
+            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;"
+                 src="/Public/home/images/logo.jpg">
         </div>
-        <div class="col-lg-6 col-lg-offset-2" id="top" style="padding-right: 20px;">
-            <div style="text-align: right"><a href="team.html">中文</a>&nbsp;|&nbsp;<a href="team.html?status=1">English</a>
+        <div class="col-lg-8" id="top">
+            <div style="text-align: right"><a href="team.html">中文</a>&nbsp;|&nbsp;<a
+                    href="team.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -199,8 +332,8 @@
     </div>
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
-    <div style="width: 100%; height: 350px; overflow: hidden;padding: 0">
-        <img style="width: 100%;margin-top: -130px;" src="/Public/home/images/banner1.jpg">
+    <div style="width: 100%; height: 400px; overflow: hidden;padding: 0">
+        <img style="width: 100%;height: 400px" src="/Public/home/images/banner1.jpg">
     </div>
 </div>
 <div class="container" style="margin-top: -50px;">
@@ -220,7 +353,8 @@
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;font-family: 'Microsoft YaHei';font-size: 12px;">
-            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html"
+                                                                         style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
