--- a/Public/admin/team.html
+++ b/Public/admin/team.html
@@ -183,6 +183,15 @@
                     </li>
                     <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar">  麦星投资 <span class="badge bg-primary pull-right">1</span></a>
+                        <ul>
+                            <li><a href="invest.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span> 投资管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
                                 class="hidden-minibar">  新闻管理 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
                             <li><a href="news.html" data-original-title="Basic"><i
