--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -265,8 +265,8 @@
     </div>
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
-    <div style="width: 100%;height: 400px; overflow: hidden; padding: 0">
-        <img style="width: 100%;height: 400px;" src="/Public/home/images/banner2.jpg">
+    <div style="width: 100%;height: 250px; overflow: hidden; padding: 0">
+        <img style="width: 100%;height: 250px;" src="/Public/home/images/news1.jpg">
     </div>
 </div>
 <div class="container" style="margin-top: 50px;">
@@ -313,7 +313,7 @@
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
-            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html"
+            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html"
                                                                          style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
