--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -136,6 +136,7 @@
 </script>
 <style>
     #city_list{
+        text-align: center;
         height: 27px;
         border-bottom: 2px #f4f4f4 solid;
     }
@@ -163,9 +164,9 @@
 
     .city_name {
         color: #000000 !important;
-        display: block;
+        /*display: block;
         margin-right: 0;
-        float: right;
+        float: right;*/
         font-size: 18px;
         font-family: "Microsoft YaHei"
     }
@@ -193,7 +194,7 @@
     }
 
     #city_list span{
-        margin-right: 20px;
+        margin: 0 auto;
         text-align: center;
     }
     .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9 {
