--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -64,6 +64,8 @@
                 $('#auth').text(r.msg.auth);
                 if (r.msg.img1) {
                     $('#img1').attr('src', '../..' + r.msg.img1);
+                    var img1_w=$('#img1').width();
+                    var img1_w=$('#img1').width();
                 }
                 else {
                     $('#img1').css('display','none');
@@ -306,7 +308,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-10 col-lg-offset-1">
-            <img style="width: 100%;height: 300px;" id="img1" src=""/>
+            <img style="width: 100%;" id="img1" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
@@ -316,7 +318,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-10 col-lg-offset-1">
-            <img style="width: 100%;height: 300px;" id="img2" src=""/>
+            <img style="width: 100%;" id="img2" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
@@ -326,7 +328,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-10 col-lg-offset-1">
-            <img style="width: 100%;height: 300px;" id="img3" src=""/>
+            <img style="width: 100%;" id="img3" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
